--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "seo.ave@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+      "ext-mbstring": "*"
+    }
 }
