--- a/composer.json
+++ b/composer.json
@@ -1,17 +1,18 @@
 {
-    "name": "hyperion-user/mywork",
-    "autoload": {
-        "psr-4": {
-            "App\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "Seoave",
-            "email": "seo.ave@gmail.com"
-        }
-    ],
-    "require": {
-      "ext-mbstring": "*"
+  "name": "hyperion-user/mywork",
+  "autoload": {
+    "psr-4": {
+      "App\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "Seoave",
+      "email": "seo.ave@gmail.com"
+    }
+  ],
+  "require": {
+    "ext-mbstring": "*",
+    "php": ">=8.0"
+  }
 }
