--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,8 @@
   "require": {
     "ext-mbstring": "*",
     "php": ">=8.0",
-    "ext-mysqli": "*"
+    "ext-mysqli": "*",
+    "ext-pdo": "*",
+    "symfony/dotenv": "^6.0"
   }
 }
