--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "php": ">=8.0",
     "ext-mysqli": "*",
     "ext-pdo": "*",
-    "symfony/dotenv": "^6.0"
+    "symfony/dotenv": "^6.0",
+    "ext-http": "*"
   }
 }
